--- a/index.html
+++ b/index.html
@@ -35,87 +35,85 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#information">Information</a></li>
+            <li><a href="#help">Help</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <!-- <div class="container">
-
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-
-    </div> -->
-    <!-- /.container -->
-
-
     <!-- first section - Home -->
   <div id="home" class="home">
-    <div class="text-vcenter">
-      <h1>Hello World</h1>
-      <h3>This is bootstrap-based layout</h3>
-      <a href="#about" class="btn btn-default btn-lg">Continue</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="color_white vcenter text-center">
+            <h1 class="custom_heading">Hello World</h1>
+            <h3>This is bootstrap-based layout</h3>
+            <a href="#about" class="btn btn-default btn-lg">Continue</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <!-- /first section -->
+  <!-- first section -->
 
   <!-- second section - About -->
-  <div id="about" class="pad-section">
+  <div id="about" class="pad_section">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/logo.png" alt="" />
+          <img src="images/logo.png" alt="Logo">
         </div>
         <div class="col-sm-6 text-center">
           <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet.</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum metus et ligula venenatis, at rhoncus nisi molestie. Pellentesque porttitor elit suscipit massa laoreet metus.</p>
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Sed interdum metus et ligula venenatis, at rhoncus nisi molestie.
+            Pellentesque porttitor elit suscipit massa laoreet metus.
+          </p>
         </div>
       </div>
     </div>
   </div>
-  <!-- /second section -->
+  <!-- second section -->
 
   <!-- third section - Services -->
-  <div id="services" class="pad-section">
+  <div id="services" class="pad_section">
     <div class="container">
       <h2 class="text-center">Our Services</h2> <hr />
       <div class="row text-center">
         <div class="col-sm-3 col-xs-6">
-          <i class="glyphicon glyphicon-cloud"> </i>
+          <i class="glyphicon glyphicon-cloud custom_glyphicon"> </i>
           <h4>Service 1</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
         </div>
         <div class="col-sm-3 col-xs-6">
-          <i class="glyphicon glyphicon-leaf"> </i>
+          <i class="glyphicon glyphicon-leaf custom_glyphicon"> </i>
           <h4>Service 2</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
         </div>
         <div class="col-sm-3 col-xs-6">
-          <i class="glyphicon glyphicon-phone-alt"> </i>
+          <i class="glyphicon glyphicon-phone-alt custom_glyphicon"> </i>
           <h4>Service 3</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
         </div>
         <div class="col-sm-3 col-xs-6">
-          <i class="glyphicon glyphicon-bullhorn"> </i>
+          <i class="glyphicon glyphicon-bullhorn custom_glyphicon"> </i>
           <h4>Service 4</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
         </div>
       </div>
     </div>
   </div>
-  <!-- /third section -->
+  <!-- third section -->
 
   <!-- fourth section - Information -->
-  <div id="information" class="pad-section">
+  <div id="information" class="pad_section">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <div class="panel panel-default">
+          <div class="panel panel-default custom_panel">
             <div class="panel-heading">
               <h2 class="panel-title">Additional information</h2>
             </div>
@@ -125,7 +123,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="panel panel-default">
+          <div class="panel panel-default custom_panel">
             <div class="panel-heading">
               <h2 class="panel-title">Additional information</h2>
             </div>
@@ -137,26 +135,26 @@
       </div>
     </div>
   </div>
-  <!-- /fourth section -->
+  <!-- fourth section -->
 
-  <!-- fifth section -->
-  <div id="services" class="pad-section">
+  <!-- fifth section - help -->
+  <div id="help" class="pad_section">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 text-center">
+        <div class="col-md-12 text-center">
           <h3>Parallax scrolling effect is in action</h3>
           <h4>The next is the address on Google maps</h4>
         </div>
       </div>
     </div>
   </div>
-  <!-- /fifth section -->
+  <!-- fifth section -->
 
   <!-- footer -->
   <footer>
-    <hr />
+    <hr/>
     <div class="container">
-      <p class="text-right">Copyright &copy; Your Company 2014</p>
+      <p class="text-right">Copyright &copy; by Sanjeet Kumar 2017</p>
     </div>
   </footer>
   <!-- /footer -->
