--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="color_white vcenter text-center">
+          <div class="color_white vcenter">
             <h1 class="custom_heading">Hello World</h1>
             <h3>This is bootstrap-based layout</h3>
             <a href="#about" class="btn btn-default btn-lg">Continue</a>
@@ -64,7 +64,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/logo.png" alt="Logo">
+          <img class="img-circle" src="images/logo.png" alt="Logo">
         </div>
         <div class="col-sm-6 text-center">
           <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet.</h2>
@@ -138,7 +138,7 @@
   <!-- fourth section -->
 
   <!-- fifth section - help -->
-  <div id="help" class="pad_section">
+  <div id="help" class="pad_section greenbcg">
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
@@ -151,10 +151,10 @@
   <!-- fifth section -->
 
   <!-- footer -->
-  <footer>
+  <footer id="footer" class="custom_footer">
     <hr/>
     <div class="container">
-      <p class="text-right">Copyright &copy; by Sanjeet Kumar 2017</p>
+      <p class="text-right">Copyright &copy; 2017 Sanjeet Kumar </p>
     </div>
   </footer>
   <!-- /footer -->
